--- a/flutter_mapbox_call_js/assets/layer_test.html
+++ b/flutter_mapbox_call_js/assets/layer_test.html
@@ -40,25 +40,35 @@
         mapboxgl.accessToken = config.accessToken;
 
         var origin = [126.89630699999998, 37.483169];
-        var destination, line;
-        var truck;
 
         var map = new mapboxgl.Map({
             container: "map",
-            fadeDuration:0,
+            fadeDuration: 0,
             style: config.style,
             center: origin,
             zoom: 16,
-            pitch: 60,
-            bearing: 90,
         });
+
+        var destination, line;
+        var truck;
+        let clickPos;
+        const canvas = map.getCanvasContainer();
+
         map.on("mousemove", () => {
             console.log("A mousemove event has occurred.");
         });
 
+        map.on('click', (e) => {
+            console.log(`A click event has occurred at ${e.lngLat}`);
+        });
+
+        map.on('mousedown', (e) => {
+            console.log('A mousedown event has occurred.', e.lngLat);
+            clickPos = e.lngLat
+        });
 
 
-        const canvas = map.getCanvasContainer();
+
 
         function setSource(id, data) {
             let jsonData = JSON.parse(data);
@@ -108,44 +118,160 @@
             ],
         };
 
+        const polyGeojosn = {
+            type: "FeatureCollection",
+            features: [
+                {
+                    type: "Feature",
+                    geometry: {
+                        type: "Polygon",
+                        coordinates: [
+                            [
+                                [126.886903055182, 37.4848001985485],
+                                [126.891636078266, 37.4908081396872],
+                                [126.89654749206602, 37.483294848898396],
+                                [126.886903055182, 37.4848001985485],
+                            ],
+                        ],
+                    },
+                    properties: {},
+                },
+            ],
+        };
+
+        const lineGeojson = {
+            type: "FeatureCollection",
+            features: [
+                {
+                    type: "Feature",
+                    properties: {
+                        lineColor:"red",
+                        lineWidth:10,
+                        'lineOpacity': 0.7
+                    },
+                    geometry: {
+                        type: "LineString",
+                        coordinates: [
+                            [
+                                126.89432144165038,
+                                37.48325303179684
+                            ],
+                            [
+                                126.8926477432251,
+                                37.48161838992951
+                            ],
+                            [
+                                126.88987970352173,
+                                37.47938772718508
+                            ],
+                            [
+                                126.89329147338867,
+                                37.47884282234884
+                            ],
+                            [
+                                126.89558744430542,
+                                37.4785022548084
+                            ],
+                            [
+                                126.89640283584595,
+                                37.47874065224967
+                            ],
+                            [
+                                126.8994927406311,
+                                37.480579692661436
+                            ],
+                            [
+                                126.90120935440062,
+                                37.48267410022554
+                            ],
+                            [
+                                126.89859151840209,
+                                37.48372979560496
+                            ],
+                            [
+                                126.8972611427307,
+                                37.483797904472056
+                            ],
+                            [
+                                126.89537286758421,
+                                37.48456412494854
+                            ],
+                            [
+                                126.89434289932251,
+                                37.48337222303409
+                            ],
+                            [
+                                126.8952441215515,
+                                37.48292951176587
+                            ]
+                        ]
+                    },
+                    id: "sampleLine1"
+                }
+            ],
+        }
+
         function addSymbol() {
             map.addSource("my-data", {
                 type: "geojson",
                 data: geojson
             });
 
-            // map.addSource("my-data2", {
-            //     type: "geojson",
-            //     data: {
-            //         type: "FeatureCollection",
-            //         features: [
-            //             {
-            //                 type: "Feature",
-            //                 geometry: {
-            //                     type: "Polygon",
-            //                     coordinates: [
-            //                         [
-            //                             [126.886903055182, 37.4848001985485],
-            //                             [126.891636078266, 37.4908081396872],
-            //                             [126.89654749206602, 37.483294848898396],
-            //                             [126.886903055182, 37.4848001985485],
-            //                         ],
-            //                     ],
-            //                 },
-            //                 properties: {},
-            //             },
-            //         ],
-            //     },
-            // });
+            map.addSource("my-data2", {
+                type: "geojson",
+                data: polyGeojosn
+            });
 
+            map.addSource("my-data3", {
+                type: "geojson",
+                data: lineGeojson
+            });
             map.addLayer(
                 { "id": "my-data", "type": "symbol", "source": "my-data", "layout": { "symbol-sort-key": ["get", "zIndex"], "icon-allow-overlap": false, "icon-ignore-placement": false, "icon-size": ["get", "iconSize"], "icon-image": ["get", "iconImage"], "icon-rotate": ["get", "iconRotate"], "icon-offset": ["get", "iconOffset"], "icon-anchor": ["get", "iconAnchor"], "text-field": ["get", "textField"], "text-size": ["get", "textSize"], "text-max-width": ["get", "textMaxWidth"], "text-letter-spacing": ["get", "textLetterSpacing"], "text-justify": ["get", "textJustify"], "text-anchor": ["get", "textAnchor"], "text-rotate": ["get", "textRotate"], "text-transform": ["get", "textTransform"], "text-offset": ["get", "textOffset"], "text-allow-overlap": false, "text-ignore-placement": false }, "paint": { "icon-opacity": ["get", "iconOpacity"], "icon-color": ["get", "iconColor"], "icon-halo-color": ["get", "iconHaloColor"], "icon-halo-width": ["get", "iconHaloWidth"], "icon-halo-blur": ["get", "iconHaloBlur"], "text-opacity": ["get", "textOpacity"], "text-color": ["get", "textColor"], "text-halo-color": ["get", "textHaloColor"], "text-halo-width": ["get", "textHaloWidth"], "text-halo-blur": ["get", "textHaloBlur"] } }
 
             );
+            map.addLayer({
+                "id": "my-data3",
+                "type": "line",
+                "source": "my-data3",
+                "layout": {
+                    "line-join": [
+                        "get",
+                        "lineJoin"
+                    ]
+                },
+                "paint": {
+                    "line-opacity": [
+                        "get",
+                        "lineOpacity"
+                    ],
+                    "line-color": [
+                        "get",
+                        "lineColor"
+                    ],
+                    "line-width": [
+                        "get",
+                        "lineWidth"
+                    ],
+                    "line-gap-width": [
+                        "get",
+                        "lineGapWidth"
+                    ],
+                    "line-offset": [
+                        "get",
+                        "lineOffset"
+                    ],
+                    "line-blur": [
+                        "get",
+                        "lineBlur"
+                    ]
+                }
+            }
+            );
 
 
             map.addLayer({
-                id: "poly",
+                id: "my-data2",
                 type: "fill",
                 source: "my-data2",
                 paint: {
@@ -154,6 +280,8 @@
                 },
                 filter: ["==", "$type", "Polygon"],
             });
+
+
 
             map.on("mouseenter", "my-data", (_) => {
                 map.getCanvas().style.cursor = "pointer";
@@ -193,12 +321,44 @@
             map.once('mouseup', onUp);
         });
 
-        function targetGeoJson (id){
+        map.on('mousedown', 'my-data2', (e) => {
+            // Prevent the default map drag behavior.
+            e.preventDefault();
+
+            let id = e.features[0].properties['id']
+
+
+            // console.log("relatedCounties", relatedCounties);
+
+            targetIdx = targetGeoJson(id);
+            canvas.style.cursor = 'grab';
+
+            map.on('mousemove', onMovePoly);
+            map.once('mouseup', onUp);
+        });
+
+        map.on('mousedown', 'my-data3', (e) => {
+            // Prevent the default map drag behavior.
+            e.preventDefault();
+
+            let id = e.features[0].properties['id']
+
+
+            // console.log("relatedCounties", relatedCounties);
+
+            targetIdx = targetGeoJson(id);
+            canvas.style.cursor = 'grab';
+
+            map.on('mousemove', onMoveLine);
+            map.once('mouseup', onUp);
+        });
+
+        function targetGeoJson(id) {
             let _idx;
-            for (let i in geojson.features){
-                console.log( geojson.features);
-                if ( geojson.features[i]['id'] == id){
-                    console.log("idx : ",i);
+            for (let i in geojson.features) {
+                console.log(geojson.features);
+                if (geojson.features[i]['id'] == id) {
+                    console.log("idx : ", i);
                     _idx = i;
                     break;
                 }
@@ -209,9 +369,12 @@
         function onMove(e) {
             const coords = e.lngLat;
 
+
+
+
             // Set a UI indicator for dragging.
             canvas.style.cursor = 'grabbing';
-       
+
 
             // Update the Point feature in `geojson` coordinates
             // and call setData to the source layer `point` on it.
@@ -224,10 +387,105 @@
 
 
             canvas.style.cursor = '';
-
+            beforCoord =null
             // Unbind mouse/touch events
             map.off('mousemove', onMove);
+            map.off('mousemove', onMovePoly);
+            map.off('mousemove', onMoveLine);
             map.off('touchmove', onMove);
+        }
+
+
+        let beforCoord = null
+        function onMovePoly(e) {
+            const coords = e.lngLat;
+            let moveX;
+            let moveY;
+
+            if (!beforCoord) {
+                moveX = (coords.lng - clickPos.lng) * 0.1
+                moveY = (coords.lat - clickPos.lat) * 0.1
+            } else {
+                moveX = (coords.lng - beforCoord.lng)
+                moveY = (coords.lat - beforCoord.lat)
+            }
+
+            beforCoord = coords;
+
+
+            // let moveX = -0.00005;
+            // let moveY = -0.00005;
+
+
+
+            console.log("Move X ", moveX);
+            console.log("Move Y ", moveY);
+
+            let rawCoord = polyGeojosn.features[0].geometry.coordinates[0];
+            let tempList = [];
+            for (let c in rawCoord) {
+                console.log("CC  ", rawCoord[c]);
+                let _ = [rawCoord[c][0] + moveX, rawCoord[c][1] + moveY]
+                tempList.push(_)
+            }
+            polyGeojosn.features[0].geometry.coordinates[0] = tempList;
+            map.getSource('my-data2').setData(polyGeojosn);
+
+
+
+            // Set a UI indicator for dragging.
+            canvas.style.cursor = 'grabbing';
+
+
+            // // Update the Point feature in `geojson` coordinates
+            // // and call setData to the source layer `point` on it.
+            // geojson.features[targetIdx].geometry.coordinates = [coords.lng, coords.lat];
+            // map.getSource('my-data').setData(geojson);
+        }
+        function onMoveLine(e) {
+            const coords = e.lngLat;
+            let moveX;
+            let moveY;
+
+            if (!beforCoord) {
+                moveX = (coords.lng - clickPos.lng) * 0.1
+                moveY = (coords.lat - clickPos.lat) * 0.1
+            } else {
+                moveX = (coords.lng - beforCoord.lng)
+                moveY = (coords.lat - beforCoord.lat)
+            }
+
+            beforCoord = coords;
+
+
+            // let moveX = -0.00005;
+            // let moveY = -0.00005;
+
+
+
+            console.log("Move X ", moveX);
+            console.log("Move Y ", moveY);
+
+            let rawCoord = lineGeojson.features[0].geometry.coordinates;
+            let tempList = [];
+            for (let c in rawCoord) {
+                console.log("CC  ", rawCoord[c]);
+                let _ = [rawCoord[c][0] + moveX, rawCoord[c][1] + moveY]
+                tempList.push(_)
+            }
+            lineGeojson.features[0].geometry.coordinates = tempList;
+            map.getSource('my-data3').setData(lineGeojson);
+
+
+
+            // Set a UI indicator for dragging.
+            canvas.style.cursor = 'grabbing';
+
+
+            // // Update the Point feature in `geojson` coordinates
+            // // and call setData to the source layer `point` on it.
+            // geojson.features[targetIdx].geometry.coordinates = [coords.lng, coords.lat];
+            // map.getSource('my-data').setData(geojson);
         }
     </script>
 </body>
